# TRiAs

./: .gitignore  LICENSE  README.md  example.sh  pyproject.toml
.github/workflows/: publish.yml
src/trias/: cli.py
src/trias/allele/: __init__.py  extract.py  report_dntre.py
src/trias/annotation/: __init__.py  moi_annot.py  overlap_gene.py
src/trias/bed/: prepare.py
src/trias/dntre/: dntre.py
src/trias/mc_ratio/: mc_ratio.py  mc_ratio_prior.py
src/trias/motif/: count.py
src/trias/summary/: motif_summary.py
